--- a/Responsive_SangramPanda_21_08_2020/responsive.html
+++ b/Responsive_SangramPanda_21_08_2020/responsive.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 
 <head>
     <title>BETA CENTAURI PVT. LTD</title>
     <link rel="stylesheet" href="Styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-
-
     <div class="header">
          <h2>BETA CENTAURI PVT. LTD</h2>
-
-
     </div>
      <div class="row">
         <div class="navbar">
